Fixed z-index on twitter composer

--- a/client/scss/tweet-composer.scss
+++ b/client/scss/tweet-composer.scss
@@ -99,11 +99,11 @@
 			top: 0;
 			margin: auto;
 			height: 100%;
-			z-index: 1;
+			z-index: 0;
 			transition: width 200ms, background-color 400ms;
 		}
 		& * {
-			z-index: 1;
+			z-index: 0;
 		}
 		.tweet-composer-counter {
 			padding: 6pt;
